--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ plugins {
   id 'org.scoverage' version '7.0.1' apply false
   id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
   id 'com.diffplug.spotless' version '6.14.0' apply false // 6.14.1 and newer require Java 11 at compile time, so we can't upgrade until AK 4.0
+  id "com.github.davidmc24.gradle.plugin.avro" version "1.6.0"
 }
 
 ext {
@@ -113,6 +114,9 @@ allprojects {
 
   repositories {
     mavenCentral()
+    maven {
+      url "https://packages.confluent.io/maven"
+    }
   }
 
   dependencyUpdates {
@@ -1996,11 +2000,19 @@ project(':shell') {
 }
 
 project(':streams') {
+  apply plugin: "com.github.davidmc24.gradle.plugin.avro"
   archivesBaseName = "kafka-streams"
   ext.buildStreamsVersionFileName = "kafka-streams-version.properties"
 
   configurations {
     generator
+  }
+
+  generateAvroProtocol {
+    source("examples/src/avro")
+  }
+  generateAvroJava {
+    source("examples/src/avro")
   }
 
   dependencies {
@@ -2011,6 +2023,8 @@ project(':streams') {
     implementation libs.slf4jApi
     implementation libs.jacksonAnnotations
     implementation libs.jacksonDatabind
+    api "org.apache.avro:avro:1.11.1"
+    api "io.confluent:kafka-streams-avro-serde:7.3.0"
 
     // testCompileOnly prevents streams from exporting a dependency on test-utils, which would cause a dependency cycle
     testCompileOnly project(':streams:test-utils')
@@ -2055,7 +2069,7 @@ project(':streams') {
   sourceSets {
     main {
       java {
-        srcDirs = ["src/generated/java", "src/main/java"]
+        srcDirs = ["src/generated/java", "src/main/java","build/generated-main-avro-java"]
       }
     }
     test {
